<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu1">

    <TextView
        android:id="@+id/Lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lbl1"
        android:textSize="26sp" />

    <Button
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lbl1"
        android:onClick="ubahMerah"
        android:text="@string/Btn1" />

    <Button
        android:id="@+id/Btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lbl1"
        android:layout_toEndOf="@id/Btn1"
        android:onClick="ubahHijau"
        android:text="@string/Btn2" />
</RelativeLayout>