<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu4">
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Judulmenu4"
        />

    <EditText
        android:id="@+id/Txt_Isi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        />

    <Button
        android:id="@+id/Btn_Tampil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnMenu3"
        android:onClick="Tampil_Hasil"
        />

    <TextView
        android:id="@+id/Lbl_Hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />


</LinearLayout>